# regex_tut

./: Cargo.toml  customs.txt  drones.txt  flavour.txt  function.rs  fusion_bundles.txt  gear.txt  index_compressed.txt  index_en.txt  keys.txt  links.txt  output.txt  raw1_weapons.json  raw2_weapons.json  raw3_weapons.json  raw_weapons.json  recipes.txt  regions.txt  relic_arcane.txt  resources.txt  rustfmt.toml  sentinels.txt  sortie_rewards.txt  upgrades.txt  warframes.txt  weapons.txt
src/: main.rs  warframe_structs.rs
src/warframe_structs/: common_structs.rs  relic_or_arcane.rs
