[package]
name = "regex_tut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lzma = "0.2.2"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = "1.0.195"
serde_json = { version = "1.0.111", features = ["raw_value"] }
